@@ -9,6 +9,9 @@ contributing to this release.
 
 {{{ Bug Fixes
 
+- Fixed freezes on hypersearch with encoding errors.
+  (#3502585 Jarek Czekalski)
+
 - Fixed IO error when changing VFS Browser filter content
   (#3502820 Matthieu Casanova)
 
